[gd_scene load_steps=8 format=2]

[ext_resource path="res://Dialogues/dialogue_box.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Dialogue/dialogue_win.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Dialogue/Spamton_Happy.png" type="Texture" id=3]
[ext_resource path="res://Assets/fonts/menu/VT323-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Images/Dialogue/Jevil_Happy.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[node name="Dialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Texture" type="Sprite" parent="."]
position = Vector2( 504.938, 500 )
scale = Vector2( 1.0942, 0.977941 )
texture = ExtResource( 2 )

[node name="DialogueBox" type="ColorRect" parent="Texture"]
anchor_top = 0.683
anchor_bottom = 0.683
margin_left = -452.0
margin_top = -287.776
margin_right = 452.0
margin_bottom = -83.776
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
dialoguePath = "res://Assets/Texts/pre_battle_dialogue.json"

[node name="Timer" type="Timer" parent="Texture/DialogueBox"]

[node name="Portrait" type="Sprite" parent="Texture/DialogueBox"]
position = Vector2( 109.34, 91.7744 )
scale = Vector2( 1.35659, 1.35659 )
texture = ExtResource( 3 )

[node name="Text" type="RichTextLabel" parent="Texture/DialogueBox"]
anchor_left = 0.242
anchor_top = 0.098
anchor_right = 0.242
anchor_bottom = 0.098
margin_left = 0.231995
margin_top = 0.00799942
margin_right = 667.232
margin_bottom = 164.008
custom_fonts/mono_font = SubResource( 1 )
bbcode_enabled = true

[node name="Voice" type="AudioStreamPlayer" parent="Texture/DialogueBox"]

[node name="ReplyPortrait" type="Sprite" parent="Texture/DialogueBox"]
position = Vector2( 646.269, 148.133 )
scale = Vector2( 0.678395, 0.720835 )
texture = ExtResource( 5 )

[node name="ReplyText" type="RichTextLabel" parent="Texture/DialogueBox"]
margin_left = 703.0
margin_top = 122.0
margin_right = 905.0
margin_bottom = 183.0
custom_fonts/mono_font = SubResource( 2 )
bbcode_enabled = true

[node name="ExtraSound" type="AudioStreamPlayer" parent="Texture/DialogueBox"]
